--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Programa Livre da pornografia</title>
-  <meta name="description" content="Programa livre da pornografia: Vencendo o vício da pornografia, diga adeus à pornografia">
+  <meta name="description" content="Programa livre da pornografia: Vencendo o vício da pornografia, diga adeus à pornografia, como acabar com o vicio em pornografia, quais as consequencias da pornografia">
   <link rel="icon" href="26387fa4f5b1e3f7b6217b27d79bf264.png" type="image/png" sizes="16x16">
   <link rel="icon" href="2d0b56e7e51cf11036ad8734bdb67e2d.png" type="image/png" sizes="32x32">
   <link rel="apple-touch-icon" href="725b756a69a7d4c235070e51acd85560.png" sizes="180x180">
